Tags properly populating on Investments/Edit View

--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -79,6 +79,7 @@
 
         </div>
         <div id="map" class="dashMap"></div>
+        <div id="legend"><h3>Legend</h3></div>
     </div>
 </div>
 
