--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -146,7 +146,7 @@ a href {
     display:flex;
     flex-direction: row;
     justify-content:space-between;
-    align-content:center;
+    align-items:center;
     
 
 }
