Fixed Bug in Categories Index

--- a/ImpactMap/Views/Categories/Index.cshtml
+++ b/ImpactMap/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿s@model IEnumerable<ImpactMap.Models.Category>
+﻿@model IEnumerable<ImpactMap.Models.Category>
 
 @{
     ViewBag.Title = "Organizational Funding Categories";
@@ -20,9 +20,6 @@
 
     <table class="table">
         <tr>
-            <th>
-                Program Area
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.name)
             </th>
